syntax = "proto3";
package PokemonGoApi.Proto;

message SettingsRequest {
    string UUID = 1;
}


message ClientPlayerDetails {
    int64 creation_time = 1;
    string username = 2;
    int32 team = 5;
    bytes tutorial = 7;
    PlayerAvatar avatar = 8;
    int32 poke_storage = 9;
    int32 item_storage = 10;
    DailyBonus daily_bonus = 11;
    string badge = 12;
    ContactSettingsProto settings = 13;
    repeated Currency currency = 14;
}


message PlayerAvatar {
    int32 Avatar = 8;
    int32 Skin = 2;
    int32 Hair = 3;
    int32 Shirt = 4;
    int32 Pants = 5;
    int32 Hat = 6;
    int32 Shoes = 7;
    int32 Eyes = 9;
    int32 Backpack = 10;
}

message DailyBonus {
    int64 NextCollectTimestampMs = 1;
    int64 NextDefenderBonusCollectTimestampMs = 2;
}

message Currency {
    string type = 1;
    int32 amount = 2;
}

message ContactSettingsProto {
    bool SendMarketingEmails = 1;
    bool SendPushNotifications = 2;
}
